 - Renamed StringTemplate.process() into format() to make place for a parse() method.
 - The create*() methods in ApplicationHelper simply require an instance of Filter as result parameter.
 - Clarified description for 304 status code.
 - Added @Override annotation to all example source code. Suggested by Piyush Purang.

1.0 beta 19 (2006-10-23)
[Bugs fixed]
 - Fixed issue with error status preventing the setting of response headers with Servlet containers like Tomcat. Report and solution by Evan DiBiase.
 - Completed support for content streaming in the HTTP client connector extension. Issue reported by Mikkel Jensen.
 - Fixed bug in ParameterList.getFirstValue(String, boolean) ignoring the "ignoreCase" parameter.
 - Fixed issue with ServerServlet preventing the returning of an output representation with an error status code. Reported by Sean Landis.
 - Fixed incomplete plugin descriptors for some extensions.
 - Added workaround for JDK's bug #6472250 when using the fixed length mode with the HTTP client.
 - Fixed bug in FreeMarker's TemplateRepresentation closing the output stream too early, causing Simple HTTP server to fail. Reported by Zohar Melamed.
 - Fixed bug in normalization of paths when Windows style paths were used on Linux. Reported by Kabe.
 - Fixed compilation issue on Linux with UTF-8 encoding. Removed unmappable characters in DirectoryTestCase. Reported by Piyush Purang.
 
[API breaking changes]
 - Renamed Representation.isContentAvailable() to isAvailable() and isContentTransient() to isTransient().
 - Merged Client and GenericClient into a single Client class.
 - Moved com.noelios.restlet.connector into hidden com.noelios.restlet.impl.connector package.
 - Moved internal utilities from com.noelios.restlet.util into hidden com.noelios.restlet.impl.util package.
 - Moved com.noelios.restlet.spi into hidden com.noelios.restlet.impl package.
 - Moved org.restlet.component.ContainerContext to com.noelios.restlet.impl.component.ContainerContext.