@@ -53,7 +53,8 @@ Changes log
  - The create*() methods in ApplicationHelper simply require an instance of Filter as result parameter.
  - Clarified description for 304 status code.
  - Added @Override annotation to all example source code. Suggested by Piyush Purang.
-
+ - Added a constructor to ObjectRepresentation taking a serialized object representation. getObject() will return the deserialized object.
+ 
 1.0 beta 19 (2006-10-23)
 [Bugs fixed]
  - Fixed issue with error status preventing the setting of response headers with Servlet containers like Tomcat. Report and solution by Evan DiBiase.
